no errors after validation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <title>Page Title</title>
@@ -24,7 +24,7 @@
         <div class="about-content">
         <h2>About Me</h2>
         <hr>
-        <img src="./assets/images/defaultPic.png">
+        <img src="./assets/images/defaultPic.png" alt="profile-pic">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Quisque rhoncus imperdiet lacus, in molestie lectus dignissim eget. 
         Sed euismod imperdiet elit ac blandit. Nulla sollicitudin imperdiet elit. 
