--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />  
 </head>
 
 <body>
-    <header>
+    <div class="head">
+
         <div class="name"><h1>Philip Taft-Dick</h1></div>
 
         <div class="nav">
@@ -19,26 +20,36 @@
                 <li> <a href="./contact.html">Contact</a></li>
             </ul>
         </div>
-    </header>
+
+    </div>
+
     <main>
+
         <div class="about-content">
         <h2>About Me</h2>
         <hr>
-        <img src="./assets/images/defaultPic.png" alt="profile-pic">
+        <img id="profilePic" src="./assets/images/defaultPic.png" alt="profile-pic">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Quisque rhoncus imperdiet lacus, in molestie lectus dignissim eget. 
         Sed euismod imperdiet elit ac blandit. Nulla sollicitudin imperdiet elit. 
-        Fusce in ante vitae lorem auctor vestibulum quis ac leo. <br>
+        Fusce in ante vitae lorem auctor vestibulum quis ac leo. <br> <br>
         Sed magna nibh, ultrices sit amet enim id, vulputate pretium augue. 
         Donec risus dolor, bibendum sed ipsum eget, mollis venenatis risus. 
         Mauris laoreet in purus vel bibendum. Nam vestibulum nulla urna, ut gravida urna porttitor ac. 
-        Suspendisse sed mauris condimentum, condimentum purus et, semper ex. <br>
+        Suspendisse sed mauris condimentum, condimentum purus et, semper ex. <br> <br>
         Nullam feugiat tristique justo eu volutpat. Sed feugiat ornare turpis, eu finibus nisi.
         Aenean luctus tincidunt nulla vel pharetra. Aenean quis nibh non nibh eleifend mattis ac placerat dui. 
         Donec congue leo a mollis egestas. Donec viverra urna nec venenatis tempus. 
         
         </p>
         </div>
+
     </main>
+
+    <footer>
+       <p>Copyright</p> 
+    </footer>
+
+
 </body>
 </html>
