--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
         <div class="name"><h1>Philip Taft-Dick</h1></div>
 
-        <div class="nav">
+        <nav>
             <ul>
                 <li> <a href="./index.html">About</a></li>
                 <li> <a href="./portfolio.html">Portfolio</a></li>
                 <li> <a href="./contact.html">Contact</a></li>
             </ul>
-        </div>
+        </nav>
 
     </div>
 
@@ -33,9 +33,9 @@
         Quisque rhoncus imperdiet lacus, in molestie lectus dignissim eget. 
         Sed euismod imperdiet elit ac blandit. Nulla sollicitudin imperdiet elit. 
         Fusce in ante vitae lorem auctor vestibulum quis ac leo. <br> <br>
-        Sed magna nibh, ultrices sit amet enim id, vulputate pretium augue. 
+        Sed magna nibh, ultrices sit amet enim id, vulputate pretium augue. Aenean quis nibh non nibh eleifend mattis ac placerat dui. 
+        Donec congue leo a mollis egestas. Donec viverra urna nec venenatis tempus.  
         Donec risus dolor, bibendum sed ipsum eget, mollis venenatis risus. 
-        Mauris laoreet in purus vel bibendum. Nam vestibulum nulla urna, ut gravida urna porttitor ac. 
         Suspendisse sed mauris condimentum, condimentum purus et, semper ex. <br> <br>
         Nullam feugiat tristique justo eu volutpat. Sed feugiat ornare turpis, eu finibus nisi.
         Aenean luctus tincidunt nulla vel pharetra. Aenean quis nibh non nibh eleifend mattis ac placerat dui. 
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-       <p>Copyright</p> 
+       <p>Copyright &copy;</p> 
     </footer>
 
 
