contact page 1st draft and other style changes

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Page Title</title>
+    <title>Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />  
@@ -23,6 +23,23 @@
     </div>
 
     <main>
+        
+        <div class="content">
+
+            <h2>Contact</h2>
+            <hr>
+
+            <form action="POST" name="CONTACT">
+                <label for="name">Name</label>
+                <input type="text" name="name" placeholder="John Smith">
+                <label for="email">Email</label>
+                <input type="email" name="email" placeholder="example@gmail.com">
+                <label for="msg">Message</label>
+                <textarea name="msg"></textarea>
+                <input type="submit" name="submit" id="submit">
+            </form>
+
+        </div>
 
     </main>
 
