--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Page Title</title>
+    <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />  
@@ -25,7 +25,7 @@
 
     <main>
 
-        <div class="about-content">
+        <div class="content">
         <h2>About Me</h2>
         <hr>
         <img id="profilePic" src="./assets/images/defaultPic.png" alt="profile-pic">
