tinkering with portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,28 @@
             <div class="content">
                 <h2>Portfolio</h2>
                 <hr>
+
+                <div class="portfolio-container">
+
+                    <img src="#" alt="#">
+                    <div class="overlay-text">PROJECT-NAME</div>
+
+                    <img src="#" alt="#">
+                    <div class="overlay-text">PROJECT-NAME</div>
+
+                    <img src="#" alt="#">
+                    <div class="overlay-text">PROJECT-NAME</div>
+
+                    <img src="#" alt="#">
+                    <div class="overlay-text">PROJECT-NAME</div>
+
+                    <img src="#" alt="#">
+                    <div class="overlay-text">PROJECT-NAME</div>
+
                 </div>
+
+
+            </div>
 
     </main>
 
