--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li> <a href="./index.html">About</a></li>
-                <li> <a href="./portfolio-flex.html">Portfolio</a></li>
+                <li> <a href="./gallery.html">Portfolio</a></li>
                 <li> <a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
