major changes to gallery page. More flexbox...

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="content">
         <h2>About Me</h2>
         <hr>
-        <img id="profilePic" src="./assets/images/defaultPic.png" alt="profile-pic">
+        <img id="profilePic" src="./assets/images/defaultPic.png" alt="profile-pic" width="180px">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Quisque rhoncus imperdiet lacus, in molestie lectus dignissim eget. 
         Sed euismod imperdiet elit ac blandit. Nulla sollicitudin imperdiet elit. 
@@ -38,6 +38,8 @@
         Donec risus dolor, bibendum sed ipsum eget, mollis venenatis risus. 
         Suspendisse sed mauris condimentum, condimentum purus et, semper ex. <br> <br>
         Nullam feugiat tristique justo eu volutpat. Sed feugiat ornare turpis, eu finibus nisi.
+        Aenean luctus tincidunt nulla vel pharetra. Aenean quis nibh non nibh eleifend mattis ac placerat dui. <br>
+        Donec congue leo a mollis egestas. Donec viverra urna nec venenatis tempus.Nullam feugiat tristique justo eu volutpat. Sed feugiat ornare turpis, eu finibus nisi.
         Aenean luctus tincidunt nulla vel pharetra. Aenean quis nibh non nibh eleifend mattis ac placerat dui. 
         Donec congue leo a mollis egestas. Donec viverra urna nec venenatis tempus. 
         
