--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />  
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -15,9 +16,9 @@
 
         <nav>
             <ul>
-                <li> <a href="./index.html">About</a></li>
-                <li> <a href="./gallery.html">Portfolio</a></li>
-                <li> <a href="./contact.html">Contact</a></li>
+                <li><a class="nav-link pop" href="./index.html">About</a></li>
+                <li><a class="nav-link" href="./gallery.html">Portfolio</a></li>
+                <li><a class="nav-link" href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -52,6 +53,7 @@
        <p>Copyright &copy;</p> 
     </footer>
 
+<script src="./assets/js/script.js"></script>
 
 </body>
 </html>
