--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
         <nav>
             <ul>
-                <li><a class="nav-link pop" href="./index.html">About</a></li>
-                <li><a class="nav-link" href="./gallery.html">Portfolio</a></li>
-                <li><a class="nav-link" href="./contact.html">Contact</a></li>
+                <li><a href="./index.html">About</a></li>
+                <li><a href="./gallery.html">Portfolio</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
