continued flexbox overhaul and other stylistic changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class="head">
+    <header>
+    <div class="head-content">
 
         <div class="name"><h1>Philip Taft-Dick</h1></div>
 
@@ -23,6 +24,7 @@
         </nav>
 
     </div>
+    </header>
 
     <main>
 
