sticky/responsive footer using jquery

--- a/gallery.html
+++ b/gallery.html
@@ -63,9 +63,9 @@
 
     </main>
 
-        <footer>
+         <footer class="foot">
             <p>Copyright &copy;</p> 
-        </footer>
+         </footer>
 
 <script src="./assets/js/script.js"></script>
 
