--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,9 @@
 
     </main>
 
-        <footer>
+    <footer class="foot">
             <p>Copyright &copy;</p> 
-        </footer>
+    </footer>
 
 <script src="./assets/js/script.js"></script>
 </body>
