--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,15 @@
             <form>
                     <div class="form-group">
                       <label for="exampleInputEmail1">Name</label>
-                      <input type="name text" class="form-control" placeholder="John Smith">
+                      <input type="text" class="form-control" placeholder="John Smith">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="example@gmail.com">
                     </div>
                     <div class="form-group">
                             <label for="msg">Message</label>
-                            <textarea type="text" name="msg" class="form-control"></textarea>
+                            <textarea id="msg" class="form-control"></textarea>
                     </div>
                     <button type="submit" class="contact-submit btn-lg btn-info ">Submit</button>
             </form>
