--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
     <main>
 
-        <div class="content">
+        <div class="main-content">
         <h2>About Me</h2>
         <hr>
         <img id="profilePic" src="./assets/images/defaultPic.png" alt="profile-pic" width="180">
-        <p> &nbsp; Hi! Thanks for visiting my personal web portfolio. To peek at my finished work or preview what is to come please visit my personal gallery page or get in touch (even better) using the links above. <br> <br>
+        <p> &nbsp; Hi! Thanks for visiting my personal web portfolio. To peek at my finished work or preview what is to come please visit my personal gallery page or get in touch using the links above. <br> <br>
 
             A little bit about me: Due to the nature of my parents' work as a UN civil servant and teacher, I was fortunate to have grown up internationally, moving from country to country every few years. I particulary loved our time spent living in the wonderful nation of Sri Lanka which was our home base through my most formative years before moving to San Diego to attend <abbr title="University of San Diego">USD</abbr>. <br> <br>
             
