--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 </header>
     <main>
         
-        <div class="content">
+        <div class="main-content">
 
             <h2>Contact</h2>
             <hr>
