--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
                 </div>
                 </header>
     <main>
-            <div class="content">
+            <div class="main-content">
                 <h2>Portfolio</h2>
                 <hr>
 
